# musika-rs

./: Cargo.toml  README.md
examples/: all.rs  autumn_leaves.rs  chord.rs  chords.rs  exercise1.rs  exercise2.rs  exercise3.rs  exercise4.rs  exercise5.rs  exercises.rs  find.rs  jazz_251.rs  jazz_hanon_1.rs  jazz_penta_minor.rs  notes.rs  practices.rs
src/: bar.rs  chord.rs  interval.rs  lib.rs  note.rs  octave.rs  scale.rs  tone.rs
src/chord/: diminished7.rs  dominant7.rs  major.rs  major7.rs  minor.rs  minor7.rs  minor7b5.rs  mod.rs
src/chords/: diminished.rs  diminished7.rs  dominant.rs  dominant7.rs  dominant9.rs  major.rs  major9.rs  minor.rs  minor7.rs  minor9.rs  mod.rs
src/scales/: major.rs  minor.rs  mod.rs  penta_minor.rs
src/xchords/: diminished.rs  dominant.rs  major.rs  minor.rs  mod.rs
