[package]
name = "musika-rs"
version = "0.1.0"
edition = "2021"
authors = ["Vlad Eminovici"]
description = "Crate for basic music elements"
homepage = "https://github.com/veminovici/musika-rs"
repository = "https://github.com/veminovici/musika-rs"
license = "MIT OR Apache-2.0"
keywords = ["music", "scales", "chords"]
categories = ["multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
